# apicode

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/model/: postman.rs
src/plugins/: java.rs
src/plugins/java/: lombok.rs  webflux.rs
tests/data/: demo.postman_collection.json
