[package]
name = "apicode"
version = "0.1.0"
edition = "2018"
authors = ["niaoshuai <niao.shuai123@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
# serde_json is just for the example, not required in general
serde_json = "1.0"
hyper = { version = "0.14.0", features = ["full"] }
# hyper-native-tls = "0.3.0"
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] }